--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -37,7 +37,9 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      <remove name="ReportViewerWebControlHandler"/>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+      <remove name="Telerik_Web_UI_WebResource_axd"/>
       <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" />
     </handlers>
   </system.webServer>
