--- a/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
@@ -46,14 +46,23 @@
     <Compile Include="LCRCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeMatch.cs" />
-    <Compile Include="RoutingRules\Actions\BaseRouteRuleAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteActions\BaseRouteRuleAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteOptionActions\BaseRouteOptionRuleAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteOptionActions\RouteOptionBlockAction.cs" />
+    <Compile Include="RoutingRules\CarrierAccount\BaseCarrierAccountSet.cs" />
+    <Compile Include="RoutingRules\CarrierAccount\CustomerSelectionSet.cs" />
+    <Compile Include="RoutingRules\CarrierAccount\RoutePoolSelectionSet.cs" />
+    <Compile Include="RoutingRules\CarrierAccount\SupplierSelectionSet.cs" />
     <Compile Include="RoutingRules\CodeSet\CodeSelectionSet.cs" />
     <Compile Include="RoutingRules\CodeSet\BaseCodeSet.cs" />
-    <Compile Include="RoutingRules\Actions\RouteBlockAction.cs" />
-    <Compile Include="RoutingRules\Actions\RouteOverrideAction.cs" />
-    <Compile Include="RoutingRules\Actions\RoutePriorityAction.cs" />
-    <Compile Include="RoutingRules\RoutingRule.cs" />
+    <Compile Include="RoutingRules\Actions\RouteActions\RouteBlockAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteActions\RouteOverrideAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteActions\RoutePriorityAction.cs" />
+    <Compile Include="RoutingRules\CodeSet\RouteRuleMatches.cs" />
+    <Compile Include="RoutingRules\CustomerRouteRule.cs" />
+    <Compile Include="RoutingRules\BaseRouteRule.cs" />
     <Compile Include="RoutingRules\CodeSet\ZoneSelectionSet.cs" />
+    <Compile Include="RoutingRules\SupplierRouteRule.cs" />
     <Compile Include="Routing\Route.cs" />
     <Compile Include="Routing\RouteDetail.cs" />
     <Compile Include="Routing\RouteOptionsDetail.cs" />
