--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildCodeMatchByFirstCodeDigit.cs" />
     <Compile Include="BuildCodeMatchFromDistinctCodes.cs" />
     <Compile Include="BuildCodeMatchFromSupplierCodes.cs" />
     <Compile Include="CopyCodeMatchTableWithValidItems.cs" />
