--- a/FZero/Vanrise.Fzero.Bypass.FTP/web.config
+++ b/FZero/Vanrise.Fzero.Bypass.FTP/web.config
@@ -5,52 +5,48 @@
   -->
 <configuration>
   <appSettings>
-    <add key="RequestAdditionalTime" value="60000" />
+    <add key="RequestAdditionalTime" value="60000"/>
     <!--10 minutes timeout for startup-->
-    <add key="TimerInterval" value="600000" />
+    <add key="TimerInterval" value="600000"/>
     <!--60 minutes-->
-
-    <add key="SERVER" value="192.168.110.241" />
-    <add key="DATABASE" value="CDRAnalysisMobile" />
-    <add key="UID" value="zain" />
-    <add key="PASSWORD" value="zain123" />
-    <add key="ToAddress" value="vanrisefms@gmail.com" />
-    <add key="host" value="smtp.gmail.com" />
-    <add key="port" value="587" />
-    <add key="FromMail" value="manualcalls@gmail.com" />
-    <add key="FromMailPassword" value="Vanrise123456" />
-    <add key="EnableSsl" value="true" />
-    <add key="XmlPath" value="D:\\mysql_xmls\\" />
-
-
-
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="SERVER" value="192.168.110.241"/>
+    <add key="DATABASE" value="CDRAnalysisMobile"/>
+    <add key="UID" value="zain"/>
+    <add key="PASSWORD" value="zain123"/>
+    <add key="ToAddress" value="vanrisefms@gmail.com"/>
+    <add key="host" value="smtp.gmail.com"/>
+    <add key="port" value="587"/>
+    <add key="FromMail" value="manualcalls@gmail.com"/>
+    <add key="FromMailPassword" value="Vanrise123456"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="XmlPath" value="D:\\mysql_xmls\\"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
-        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
-        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="MySql.Data, Version=6.9.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+        <add assembly="MySql.Web, Version=6.9.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
       </assemblies>
       <buildProviders>
-        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
       </buildProviders>
     </compilation>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5"/>
     <httpHandlers>
-      <add path="Telerik.Web.UI.WebResource.axd" verb="*" type="Telerik.Web.UI.WebResource"
-        validate="false" />
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
-        validate="false" />
+      <add path="Telerik.Web.UI.WebResource.axd" verb="*" type="Telerik.Web.UI.WebResource" validate="false"/>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
     </httpHandlers>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" />
-      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource"/>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </handlers>
   </system.webServer>
 </configuration>
