--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.MYSQL/Vanrise.Fzero.CDRImport.Data.MYSQL.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.Data.MYSQL/Vanrise.Fzero.CDRImport.Data.MYSQL.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDRDataManager.cs" />
+    <Compile Include="CDRDataManager_Walid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
