--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -4,6 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+   
+     
+ <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;"            providerName="System.Data.SqlClient" />
+    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" /> 
+
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
