--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
@@ -146,8 +146,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FraudAnalysis\Services\APIServices\StrategyAPIService.js" />
-    <Content Include="FraudAnalysis\Views\UserManagement.html" />
-    <Content Include="FraudAnalysis\Views\UserManagementController.js" />
+    <Content Include="FraudAnalysis\Views\StrategyManagement.html" />
+    <Content Include="FraudAnalysis\Views\StrategyManagementController.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
