--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -158,6 +158,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\Analytics\CarrierProfile.aspx.cs">
+      <DependentUpon>CarrierProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\Analytics\CarrierProfile.aspx.designer.cs">
+      <DependentUpon>CarrierProfile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reports\Analytics\ZoneProfit.aspx.cs">
       <DependentUpon>ZoneProfit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -194,6 +201,7 @@
     <Content Include="popoverTemp.html" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Reports\Analytics\CarrierProfile.aspx" />
     <Content Include="Reports\Analytics\ZoneProfit.aspx" />
     <Content Include="Reports\ReportChart.aspx" />
     <Content Include="Reports\ReportPage.aspx" />
@@ -312,6 +320,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Reports\Analytics\CarrierProfile.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlZoneProfits.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
