--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BusinessProcess\Constants\BPInstanceStatusEnum.js" />
+    <Content Include="BusinessProcess\Constants\BPTrackingSeverityEnum.js" />
     <Content Include="BusinessProcess\Services\BusinessProcessAPIService.js" />
     <Content Include="BusinessProcess\Views\BPDefinitionManagement.html" />
     <Content Include="BusinessProcess\Views\BPDefinitionManagementController.js" />
