--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CarrierFinancialAccountData.cs" />
     <Compile Include="FinancialAccountInfo.cs" />
+    <Compile Include="FinancialAccountInfoFilter.cs" />
     <Compile Include="FinancialAccountIsCustomerAccountContext.cs" />
     <Compile Include="FinancialAccountIsSupplierAccountContext.cs" />
     <Compile Include="FinancialValidationData.cs" />
