--- a/Retail/Code/Retail.Web/Web.config
+++ b/Retail/Code/Retail.Web/Web.config
@@ -36,6 +36,8 @@
     <add name="RetailCDRDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="RetailAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Analytics;User ID=Development;Password=dev!123"/>
 
+    <add name="VRNotificationTransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Retail_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
+
     <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=Retail_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
     <add name="RetailDBConnString" connectionString="Data Source=192.168.110.185\MSSQL2014;Database=Retail_Online;User ID=Application_Online_User;Password=Application_Online_User;" />
 
@@ -70,6 +72,7 @@
     <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString"/>
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+
     <add key="ExposedConnectionStringNames" value="RetailCDRDBConnString,RetailAnalyticsDBConnString"/>
     <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="TOneWhS_BE_DBConnStringKey" value="RetailDBConnString"/>
@@ -90,6 +93,7 @@
 
     <add key="MNPReportPath" value="/Client/Modules/Retail_Ringo/Reports/MNP Report.xls"/>
 
+    <add key="LoggingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
   </appSettings>
 
   <system.web>
