--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Extensions.WFTaskAction/Vanrise.BusinessProcess.Extensions.WFTaskAction.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Extensions.WFTaskAction/Vanrise.BusinessProcess.Extensions.WFTaskAction.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WFSchedulerTaskAction.cs" />
+    <Compile Include="WFShcedulerTaskActionExtendedSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.BusinessProcess.Entities\Vanrise.BusinessProcess.Entities.csproj">
